--- a/app/config/env.example
+++ b/app/config/env.example
@@ -74,3 +74,7 @@ CHAT_CONTEXT_WINDOW=4096
 MILVUS_FULLTEXT_HYBRID=true
 # Milvus BM25参数 - 丢弃低重要性词项的比例 (0-1之间)
 MILVUS_DROP_RATIO_SEARCH=0.2
+
+# 存储配置
+PERSIST_DIR=./storage
+UPLOAD_DIR=./storage/uploads
