--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask>=3.0.0
+flask-cors>=6.0.0
 llama-index>=0.12.0
 llama-index-vector-stores-milvus>=0.2.2
 llama-index-vector-stores-elasticsearch>=0.2.0
@@ -14,3 +15,4 @@ requests>=2.32.0
 llama-index-postprocessor-dashscope-rerank==0.3.0
 pydantic>=2.0.0
 elasticsearch>=8.0.0
+llama-index-embeddings-ollama==0.6.0
